--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="backdrop-root"></div>
-    <div id="modal-root"></div>
+    <div id="backdrop"></div>
+    <div id="overlays"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
